--- a/index.html
+++ b/index.html
@@ -3,54 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="/dist/index.css">
+  <link rel="stylesheet" href="./dist/css/index.css">
 </head>
 <body>
-<div class="cases" id="jsCasesSlider">
-  <div class="cases-wrap">
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-1.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+<div class="slider" id="jsSlider">
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-2.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-3.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-1.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-1.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-1.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
-    <div class="cases-item slide-item">
-      <div class="header">
-        <img src="/dist/images/pic-1.jpg" alt="Lorem ipsum dolor sit amet.">
-        <p><span>Lorem ipsum dolor sit amet.</span></p>
-      </div>
+  </div>
+  <div class="slider-item">
+    <div class="header">
+      <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
+      <p><span>Lorem ipsum dolor sit amet.</span></p>
     </div>
   </div>
 </div>
+<script src="./dist/js/app.js"></script>
 </body>
 </html>
