--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.1</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.2</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.3</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.4</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.5</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.6</span></p>
     </div>
   </div>
   <div class="slider-item">
     <div class="header">
       <img src="https://d22wsyl1zemnyu.cloudfront.net/images/frontendfront-logo-share.png" alt="Lorem ipsum dolor sit amet.">
-      <p><span>Lorem ipsum dolor sit amet.</span></p>
+      <p><span>Lorem ipsum dolor sit amet.7</span></p>
     </div>
   </div>
 </div>
