Add new parameter slidesToScroll
one or all from view

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
       caseSliderContainer2 = document.getElementById('jsSlider2');
 
     new Slider(caseSliderContainer);
-    new Slider(caseSliderContainer2);
+    new Slider(caseSliderContainer2, {
+      slidesToScroll: 1,
+    });
   })();
 </script>
 </body>
